css/tao.css
/* ... */
/* .tile-splash svg path {
fill: #1a3acc !important;
animation: color-change 5s infinite !important;
} */

.toggle {
    height: 0;
    margin-bottom: 0;
    float: left;
    display: block;
    width: 100%;
}

.toggle:nth-child(1) {
    z-index: 999;
}

.toggle .quote-toggle {
    background: rgb(26, 58, 204);
    background: linear-gradient(90deg, rgba(26, 58, 204, 1) 0%, rgba(255, 255, 255, 1) 100%);
    background: rgb(26, 58, 204);
    background: linear-gradient(90deg, rgba(26, 58, 204, 0.3981793400954131) 0%, rgba(255, 255, 255, 1) 100%);
    background: rgb(26, 58, 204);
    /* background: linear-gradient(90deg, rgba(26, 58, 204, 0) 0%, rgba(26, 51, 1, 0.44) 61%, rgb(255, 255, 255) 100%); */
    background: linear-gradient(90deg, rgba(26, 58, 204, 0) 0%, rgba(1, 25, 51, 0.44) 61%, rgb(0, 0, 0) 100%);
    padding: 16px 18px;
}

.quote-toggle a {
    color: inherit;
    border-bottom: none;
    text-decoration: none !important;
}

.quote-toggle .material-icons {
    vertical-align: middle;
}


/* .col-*:has(> figure) {
background: red;
} */


/* .quote {
margin: 0;
padding: 2vw;
background-color: #1a1e1c;
}
.quote blockquote {
margin: 0;
} */

@media (max-width: 767px) {
    .toggle .quote-toggle {
        width: 200px;
        font-size: 1.2em;
    }
    .wrapper {
        padding: 0px;
    }
}

.tile-category {
    font-size: 14px;
    color: #7f7f7f;
    font-weight: 100;
    margin: 2em auto 0 0;
    width: 25%;
    display: inline-block;
    background: #424242;
    padding: .25em 8px;
    border: 1px solid rgba(55, 55, 55, 1);
    border-top-right-radius: 24px;
    right: 0;
    z-index: 5;
    position: relative;
    box-shadow: 6px 0px 1px #1212126b;
    transition: all 5s ease-in !important;
}

.tile-count {
    font-size: 14px;
    color: #7f7f7f;
    font-weight: 100;
    margin: 2em auto 0 -20px;
    width: 25%;
    display: inline-block;
    background: #42424240;
    padding: .25em 8px;
    border: 1px solid rgba(55, 55, 55, 1);
    border-top-left-radius: 24px;
    z-index: 1;
    position: absolute;
    right: 0;
    text-align: right;
    transition: all 16s ease-in !important;
}

.tile-count span {
    background: #00000078;
    border-radius: 12px;
    padding: 1px 5px;
    filter: saturate(206%);
}

body#sandbox.light-mode .tile-category,
body#sandbox.light-mode .tile-count {
    background: #424242;
    color: #b7b7b7;
    border: none;
    box-shadow: 0px 0px 4px #1212126b;
}

body#sandbox.light-mode .tile-category:hover,
.tile-category:hover,
body#sandbox.light-mode .tile-count:hover,
.tile-count:hover {
    background: #45e1bf77;
    color: #45e1bf;
    transition: all 1s ease-out !important;
}

.tile-splash {
    background: white;
    /* border: 1px solid #4ba41d; */
    border: 1px solid rgba(55, 55, 55, 1);
    animation: morph 3s linear infinite;
}

.tile-splash:hover {
    background: white !important;
    /* background-color: #7f7cf9; */
    animation: none;
    /* border: 1px solid #7ae145; */
    /* border: 1px solid #45e193; */
    border: 1px solid #45e1bf;
    transition: border 700ms;
    box-shadow: 4px 5px 10px 0px #000;
    transition: box-shadow 200ms;
}

body#sandbox.light-mode .tile-splash {
    background: white;
    /* border: 1px solid #4ba41d; */
    border: none;
    animation: morph 3s linear infinite;
}

body#sandbox.light-mode .tile-splash:hover {
    background: white !important;
    /* background-color: #7f7cf9; */
    animation: none;
    /* border: 1px solid #7ae145; */
    /* border: 1px solid #45e193; */
    /* border: 1px solid #979797; */
    transition: border 700ms;
    box-shadow: 0px 0px 8px 0px #797979;
    transition: box-shadow 200ms;
}

.tile-splash:active {
    background: white !important;
    animation: none;
    border: 1px solid #7f7cf9;
    transition: border 700ms;
    box-shadow: -4px -5px 10px 0px #000;
    transition: box-shadow 200ms;
}

.tile-splash strong {
    font-weight: 800;
}


/* .tile-splash:hover {
box-shadow: -6px -8px #464f4a;
} */

.tile-splash.first {
    margin-top: 12vh;
    padding: 0.3em 18px 1.3em 0;
}

.tile-spacer {
    padding: 2.3em 18px;
}


/* .row:nth-child(1) .tile-splash p {
padding: 2.3em 18px 1.3em 18px;
} */


/* .tile-splash p:nth-child(1) {
padding: 2.3em 18px 1.3em 18px;
} */

.tile-splash p {
    padding: 2.3em 18px 0.3em 18px;
    text-wrap: nowrap;
    overflow: hidden;
}

.tile-splash.tile-last p {
    padding: 2.3em 18px 0.3em 18px;
}

.tile-splash.tile-last {
    margin: 0 auto 3em auto;
}

.tile-splash p,
.tile-splash a {
    font-size: 16px;
    color: #1a3acc;
    /* -webkit-animation: color-change 3s infinite;
-moz-animation: color-change 3s infinite;
-o-animation: color-change 3s infinite;
-ms-animation: color-change 3s infinite;
animation: color-change 3s infinite; */
}

.tile-splash p:hover,
.tile-splash a:hover {
    font-size: 16px;
    color: #1a3acc;
    animation: none 1s infinite;
}

[id$="-term-container"] {
    /* Your styles here */
    /* background: yellow;
	border: 2px solid red; */
    color: #838aaca8;
}

.tile-splash p:hover [id$="-term-container"],
.tile-splash a:hover [id$="-term-container"] {
    /* color: #1a3acc; */
    color: #73788f;
}

[id$="-term-container"]::before {
    content: "/";
    font-size: 1.2rem;
    /* content: ":"; */
    margin: 0 7px;
    /* font-weight: bold; */
    color: inherit;
    color: #00000021;
}

.tile-splash p:hover [id$="-term-container"]::before,
.tile-splash a:hover [id$="-term-container"]::before {
    /* color: #1a3acc; */
    color: #a8a8a8;
}

.tile-splash p svg path,
.tile-splash a svg path {
    /* fill: rgba(26, 58, 204, 0.23); */
    fill: rgb(255, 255, 255);
}

.tile-splash p:hover svg path,
.tile-splash a:hover svg path {
    fill: #1a3acc;
    animation: none;
}

.tile-splash svg {
    position: absolute;
    right: 18px;
    margin: 6px 18px;
}

.tile-splash svg.inline {
    position: relative;
    display: inline-block;
    margin: 6px 0 0 18px;
}
/* ... */

